demo/lab-docker-k8s/02-k8s-traefik/jenkins/svc-ingress.yml
# tag::svc[]
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: devoxx
  labels:
    guilde: ci
spec:
  ports:
  - port: 80
    name: traefik-http
  type: ExternalName
  externalName: 18.196.121.238
# end::svc[]

# tag::ingress[]
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devoxx
  labels:
    guilde: ci
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host:
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins-service
          servicePort: traefik-http
# end::ingress[]
